<?xml version="1.0" encoding="utf-8"?>

<!-- author:LLL -->
<!-- Time:3.31 -->
<!-- content:将string分类 -->
<!-- 添加记账界面中的text -->

<resources>

    <!-- project -->
    <string name="app_name">YYYY</string>
    <string name="title_activity_ys_">YS_Activity</string>

    <!-- 记账 -->

    <string name="remain_this_month">886.0</string>
    <string name="income">收入</string>
    <string name="payout">支出</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="clear">c</string>
    <string name="type_consume">默认类别：食</string>
    <string name="budget_set">设置预算</string>
    <string name="clothes1">衣--人是衣妆</string>
    <string name="eat1">食--酒足饭饱</string>
    <string name="house1">住--斯是陋室</string>
    <string name="walk1">行--踏破铁鞋</string>
    <string name="clothes">衣</string>
    <string name="eat">食</string>
    <string name="house">住</string>
    <string name="walk">行</string>
    <string name="write_this_point">记下这一笔</string>
    <string name="lastyear">上一年</string>
    <string name="nextyear">下一年</string>
    <string name="mony">RMB</string>
    <string name="remain">本月预算余额</string>
    <string name="d">本月消费情况</string>
    <string name="z">订攒钱目标 ></string>
    <string name="k">已消费</string>
    <string name="m">距目标</string>
    <string name="y">可节省</string>
    <string name="k1">100.0</string>
    <string name="m1">1890.0</string>
    <string name="y1">345.0</string>
    <string name="kindtest">食  > 腐败聚会</string>
    <string name="zq">攒钱目标</string>
    <string name="jd">借贷管理</string>
    <string name="zyj">逛攒友街</string>
    <string name="l">请选择消费类型</string>
    <string name="set">设置</string>
    <string name="week_set">设置当前周数</string>
    <!-- 预算 -->

    <string name="total_ys">总预算</string>
    <string name="other">其他</string>
    <string name="total">总预算</string>
    <string name="back">设置完成</string>
    <string name="sure">确定</string>
    <string name="ys_init">0</string>
    <!-- 统计选择时间 -->
    <string-array name="select_time">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string name="title_activity_set">SetActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="title_activity_borrow__return">Borrow_Return</string>
    <string name="borrow">可收入:</string>
    <string name="money_back">需还回:</string>
    <string name="additem">+</string>
    <string name="title_activity_add__borrow_item">Add_Borrow_item</string>
    <string name="add_borrow_item">新建借贷信息</string>
    <string name="friend_name">对方昵称:</string>
    <string name="borrow_money"> 金额 </string>
    <string name="back_date">归还期限</string>
    <string name="descripe">描述</string>
    <string name="title_activity_user__list">User_List</string>
    <string name="user">用户</string>
    <string name="not_user">非用户</string>
    <string name="borrow_manage">借贷管理</string>

</resources>