<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow1"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/budgetRemain"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/remain_this_month" 
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/budgetRemainPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="形象显示余额" 
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/button_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/payout"
                android:textColor="#FF0000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/button_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/consume"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#EEE9E9"
                android:gravity="right"
                android:textSize="40sp" 
                android:textColor="#FF0000"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/kind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/type_consume"
            android:textColor="#EE3B3B"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/yi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/clothes1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/number_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/number_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/two"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/number_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/shi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/eat1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/number_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/four"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/number_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/number_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/six"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/zhu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/house1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/number_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/number_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/number_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/xing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/walk1"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/number_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/number_float"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/point"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/number_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/write_this_point"
            android:textColor="@color/white" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="开始云同步"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>