<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow1"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/total_ys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_ys"
            android:textSize="25sp" >
        </TextView>

        <TextView
            android:id="@+id/number_ys"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ys_init"
            android:textSize="25sp" >
        </TextView>
    </LinearLayout>

    <!-- EditText -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false" >
        </EditText>
    </LinearLayout>
    <!-- 选择类别以及左部键盘 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/kind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/type_consume"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- 可选类别 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/select"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/clothes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/clothes"
                    android:textSize="27sp" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/eat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/eat"
                    android:textSize="27sp" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/house"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/house"
                    android:textSize="27sp" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/walk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:background="@null"
                    android:button="@null"
                    android:text="@string/walk"
                    android:textSize="27sp" >
                </RadioButton>
            </RadioGroup>
            <!-- 类别money显示区 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/show_clothes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/ys_init"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/show_eat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/ys_init"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/show_house"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/ys_init"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/show_walk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="@string/ys_init"
                    android:textSize="27sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.5"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/number_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/one"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/number_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/two"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/number_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/three"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/number_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/four"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/number_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/five"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/number_6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/six"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/number_7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/seven"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/number_8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/eight"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/number_9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/nine"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/number_0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/zero"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/number_float"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/point"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/number_clear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/clear"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/sure"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/sure"
                        android:textSize="20sp" >
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="5"
        android:orientation="vertical" >

        <Button
            android:id="@+id/back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/back"
            android:textSize="30dp" >
        </Button>
    </LinearLayout>

</LinearLayout>