<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/l" />
        <!-- 下大部分 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:orientation="horizontal" >

            <!-- 一级菜单 -->

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/yi"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/blackbutton"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/clothes1" />

                    <TextView
                        android:id="@+id/shi"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/blackbutton"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/eat1" />

                    <TextView
                        android:id="@+id/zhu"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/blackbutton"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/house1" />

                    <TextView
                        android:id="@+id/xing"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/blackbutton"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="@string/walk1" />
                </LinearLayout>
            </ScrollView>

            <!-- 二级菜单 -->

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/two"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>